maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:38: error: value || is not a member of Int
		while( virage=0 || !isDirectionFree() )
                                ^